feat: homepage rearrange

--- a/web/workspace/frontend/sass/parts/layout.scss
+++ b/web/workspace/frontend/sass/parts/layout.scss
@@ -21,7 +21,7 @@ body {
 		padding-bottom: 40px;
 	}
 	&--divider {
-		border-top: 1px solid #e8f0f7;
+		border-top: 1px solid #E0E0E0;
 
 		&:first-of-type() {
 			border-top: 0;
