feat: publish screens

--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -160,6 +160,16 @@
 </div>
 </div>
 
+<div class="bdr__top pad__top pad__bottom--x2 bg--dark-blue txt--white" style="border-color:#E0E0E0">
+<div class="container">
+  <h2 class="larger alignc">{@i18n}Beautiful interfaces{/i18n}</h2>
+  <p class="normal alignc marg__bottom--x2">DADI’s editing screens are designed with – and used by – journalists from leading publications. They’ll run a comb through your editorial workflow, so you can just concentrate on the content. </p>
+</div>
+  <img src="/assets/img/publish.png" style="margin:0 auto;max-width: 1000px;width:100%" class="block">
+
+
+</div>
+
 {>"partials/products" /}
 
 <div class="bg--light-grey">
