--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -61,21 +61,9 @@ form {
 	}
 }
 
-.products {
-	margin-top: 70px;
-	position: relative;
-
-	&:before {
-		position: absolute;
-		top: -40px;
-		left: 0; right: 0;
-		transform: skewY(-3deg);
-		content: ' ';
-		background: $light-grey;
-		height: 80px;
-		display: block;
-		z-index: 1;
-	}
+.product {
+	border-top: 1px solid $bdr-grey;
+	padding-top: 30px;
 }
 
 .zoom {
