--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1427,9 +1427,9 @@ body.home header {
     background: #88C24C; }
 .btn.btn--disabled,
 .btn.btn--disabled:hover .btn.btn--disabled:active {
-  background: #E5E4E4;
   color: #aaa;
-  cursor: not-allowed; }
+  border-color: #E0E0E0;
+  cursor: default; }
 .btn span[class^="ss-"] {
   vertical-align: middle;
   line-height: 100%; }
@@ -2110,21 +2110,9 @@ form .text:active, form .text:hover, form .text:focus {
   .product-logo-full {
     max-width: 100%;
     height: auto; } }
-.products {
-  margin-top: 70px;
-  position: relative; }
-.products:before {
-    position: absolute;
-    top: -40px;
-    left: 0;
-    right: 0;
-    -webkit-transform: skewY(-3deg);
-            transform: skewY(-3deg);
-    content: ' ';
-    background: #fafafa;
-    height: 80px;
-    display: block;
-    z-index: 1; }
+.product {
+  border-top: 1px solid #E0E0E0;
+  padding-top: 30px; }
 .zoom {
   transition: all 0.15s ease-in-out; }
 .zoom:hover {
