--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -125,3 +125,29 @@ abbr {
 	//background: #ffebb3;
 	font-style: italic;
 }
+
+.clients {
+	background: url(/assets/img/clients.png);
+	background-size: auto 57px;
+	background-repeat: repeat-x;
+	background-position: 50%;
+	animation: popin 0.2s;
+	animation: scroll 40s linear infinite;
+
+	@media #{$break-large} {
+		p {
+			background: #fff;
+			box-shadow: 0px 0px 24px 25px #fff;
+		}
+	}
+	@media #{$break-small} {
+		p {
+			display: none;
+		}
+	}
+}
+
+@keyframes scroll {
+	0% { background-position: 0 50%; }
+    100% { background-position: -1536px 50%; }
+}
