--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1427,9 +1427,9 @@ body.home header {
     background: #88C24C; }
 .btn.btn--disabled,
 .btn.btn--disabled:hover .btn.btn--disabled:active {
-  color: #aaa;
-  border-color: #E0E0E0;
-  cursor: default; }
+  color: #aaa !important;
+  border-color: #E0E0E0 !important;
+  cursor: default !important; }
 .btn span[class^="ss-"] {
   vertical-align: middle;
   line-height: 100%; }
@@ -2062,7 +2062,7 @@ select {
       display: none; }
     .explainer__intro {
       width: auto;
-      padding-bottom: 30px; } }
+      padding: 20px 0; } }
 form .btn, form .text {
   line-height: 1.25;
   font-weight: bolder;
@@ -2152,4 +2152,30 @@ abbr {
   cursor: help;
   text-decoration: none !important;
   font-style: italic; }
+.clients {
+  background: url(/assets/img/clients.png);
+  background-size: auto 57px;
+  background-repeat: repeat-x;
+  background-position: 50%;
+  -webkit-animation: popin 0.2s;
+          animation: popin 0.2s;
+  -webkit-animation: scroll 40s linear infinite;
+          animation: scroll 40s linear infinite; }
+@media handheld, only screen and (min-width: 50em) {
+    .clients p {
+      background: #fff;
+      box-shadow: 0px 0px 24px 25px #fff; } }
+@media handheld, only screen and (max-width: 50em) {
+    .clients p {
+      display: none; } }
+@-webkit-keyframes scroll {
+  0% {
+    background-position: 0 50%; }
+  100% {
+    background-position: -1536px 50%; } }
+@keyframes scroll {
+  0% {
+    background-position: 0 50%; }
+  100% {
+    background-position: -1536px 50%; } }
 /*# sourceMappingURL=main.css.map */
