--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -34,30 +34,30 @@
     </ul>
 
     <div class="w-web__body">
-      <div class="w-web__num">01 02 03 04 05 06 07 08 09 10 11 12</div>
+      <div class="w-web__num">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24</div>
 
-      <pre><code class="hljs json">{
-  "datasource": {
-  "key": "atricles",
-  "source": {
-    "endpoint": "1.0/site/articles"
-  },
-  "paginate": true,
-  "count": 10,
-  "sort": {
-    "date": -1
-  },
-  "fields": {},
-  "filter": {
-    "state": "published"
-  },
-  "requestParams": [
-    {
-      "param": "handle",
-      "field": "handle"
-    }
-  ]
-  }
+      <pre><code class="hljs json">{{~n}
+&nbsp;&nbsp;"datasource": {{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"key": "atricles",{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"source": {{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"endpoint": "1.0/site/articles"{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"paginate": true,{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"count": 10,{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"sort": {{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"date": -1{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"fields": {},{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"filter": {{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"state": "published"{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;"requestParams": [{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"param": "handle",{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"field": "handle"{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}{~n}
+&nbsp;&nbsp;&nbsp;&nbsp;]{~n}
+&nbsp;&nbsp;}{~n}
 }</code></pre>
     </div>
   </div>
