fix: remove breadcrumb from product page

--- a/web/workspace/partials/breadcrumb.dust
+++ b/web/workspace/partials/breadcrumb.dust
@@ -3,6 +3,7 @@
   {@eq value="On demand" /}
   {@eq value="404" /}
   {@eq value="supporting" /}
+  {@eq value="Products" /}
   {@none}
     <div class="list--breadcrumb titlecase">
       <ul class="container">
