feat: publish screenshot

--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -155,13 +155,15 @@
   </div>
 </div>
 
-<div class="pad__top pad__bottom--x2 bg--dark-blue txt--white">
+<div class="pad__top pad__bottom bg--dark-blue txt--white">
   <div class="container">
     <h2 class="larger alignc">{@i18n}Beautiful interfaces{/i18n}</h2>
     <p class="normal alignc marg__bottom--x2 bs-marg__bottom">{@i18n}DADI’s editing screens are designed with – and used by – journalists from leading publications. They’ll run a comb through your editorial workflow, so you can just concentrate on the content.{/i18n}</p>
+
+    <img src="/assets/illustrations/publish.png" class="fill block">
   </div>
   <div class="overflow-touch">
-    <img src="/assets/img/publish.png" class="container block">
+    
   </div>
 </div>
 
