--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -2,113 +2,7 @@
 
 {<bodyClass}home{/bodyClass}
 
-<div class="explainer">
-  <div class="explainer__intro">
-    <h2 class="kilo">{@i18n}Smarter content management{/i18n}</h2>
-    <p class="normal">{@i18n}DADI is open-source, headless content management technology. It’s built to make developers and editors happy.{/i18n}</p>
-  </div>
-
-  <div class="explainer__blurb b-api">
-    <img src="/assets/products/dadi-api.png" width="22">
-    <p class="small">{@i18n}Developers can start an API in 30 seconds via NPM.{/i18n}</p>
-  </div>
-
-  <div class="explainer__window w-api">
-    <div class="explainer__wrap">
-      <pre><code class="hljs bash">
-      </code></pre>
-    </div>
-  </div>
-
-  <div class="explainer__blurb b-web">
-    <img src="/assets/products/dadi-web.png" width="26">
-    <p class="small">{@i18n}Migrate easily from other platforms and template languages{/i18n}</p>
-  </div>
-
-  <div class="explainer__window w-web">
-    <ul class="w-web__tabs">
-      <li class="w-web__tab"><a href="#" class="u-active">datasource.json</a>
-      </li><li class="w-web__tab"><a href="#">index.json</a>
-      </li><li class="w-web__tab"><a href="#">index.dust</a>
-      </li>
-    </ul>
-
-    <div class="w-web__body">
-      <div class="w-web__num">01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24</div>
-
-      <pre><code class="hljs json">{{~n}
-&nbsp;&nbsp;"datasource": {{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"key": "atricles",{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"source": {{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"endpoint": "1.0/site/articles"{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"paginate": true,{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"count": 10,{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"sort": {{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"date": -1{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"fields": {},{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"filter": {{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"state": "published"{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;},{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;"requestParams": [{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"param": "handle",{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"field": "handle"{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}{~n}
-&nbsp;&nbsp;&nbsp;&nbsp;]{~n}
-&nbsp;&nbsp;}{~n}
-}</code></pre>
-    </div>
-  </div>
-
-  <div class="explainer__blurb b-publish">
-    <img src="/assets/products/dadi-publish.png" width="22">
-    <p class="small">{@i18n}Install a content editing interface for your API{/i18n}</p>
-  </div>
-
-  <div class="explainer__window w-publish">
-    <div class="w-publish__header">
-      {! <img src="/assets/explainer/dadi-publish.png" width="120"> !}
-    </div>
-
-    <div class="w-publish__body">
-      <div class="w-publish__field">
-        <label>{@i18n}Title{/i18n}</label>
-        <input type="text" value="{@i18n}Smarter content management.{/i18n}">
-      </div>
-      <div class="w-publish__field">
-        <label>{@i18n}Intro{/i18n}</label>
-        <textarea>{@i18n}DADI is open-source, headless content management technology. It’s built to make developers and editors happy.{/i18n}</textarea>
-      </div>
-    </div>
-  </div>
-
-  <div class="explainer__blurb b-cdn">
-    <img src="/assets/products/dadi-cdn.png" width="22">
-    <p class="small">Manipulate images using URL paramaters</p>
-  </div>
-
-  <div class="explainer__window w-cdn">
-    <div class="w-cdn__header">
-      <div class="url txt--grey"><span style="color:#000">http://52.213.165.8:8001/samples/mountain.png</span>?<span style="color:#000">width</span>=<span style="color:#E02975">700</span>&amp;<span style="color:#000">ratio</span>=<span style="color:#E02975">16-9</span>&amp;<span style="color:#000">resizeStyle</span>=<span style="color:#E02975">aspectfill</span>&amp;<span style="color:#000">saturate</span>=<span style="color:#E02975">-0.8</span>
-      </div>
-    </div>
-
-    <div class="w-cdn__body">
-      <img src="http://52.213.165.8:8001/samples/mountain.png?width=700&ratio=16-9&resizeStyle=aspectfill&saturate=-0.8">
-    </div>
-  </div>
-
-  <div class="explainer__connect c-1"><img src="/assets/explainer/connect-1.svg" width="118" height="349">
-  </div>
-  <div class="explainer__connect c-2"><img src="/assets/explainer/connect-2.svg">
-  </div>
-  <div class="explainer__connect c-3"><img src="/assets/explainer/connect-3.svg">
-  </div>
-  <div class="explainer__connect c-4"><img src="/assets/explainer/connect-2.svg">
-  </div>
-</div>
+{>"partials/infographic" /}
 
 <div class="clients">
   <div class="normal alignc container overflow-touch">
