--- a/web/workspace/frontend/sass/parts/forms.scss
+++ b/web/workspace/frontend/sass/parts/forms.scss
@@ -98,6 +98,7 @@
 	color: $grey !important;
 	border-color: $bdr-grey !important;
 	cursor: default !important;
+	background: none;
 }
 
 .btn span[class^="ss-"] {
